--- a/clo835finalproject/templates/about.html
+++ b/clo835finalproject/templates/about.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <title>Hello from Flask</title>
-<body style="background: {{ color }};"></body>
+<!-- <body style="background: {{ color }};"></body> -->
+<body style="background-image: url('/static/bg.jpg'); background-size: cover;">
+
+
 <div style="color: #e4e4e4;
     text-align:  center;
     height: 90px;
     vertical-align:  middle;">
 {% if name %}
-  <h1>Hello from {{ name }}!</h1>
+  <h1>Hello from Salisha, Ajay & Pratima!</h1>
 {% else %}
   <h1>Hello From CLO835!</h1>
 {% endif %}
