--- a/templates/getemp.html
+++ b/templates/getemp.html
@@ -8,7 +8,7 @@
 
 		<h1 style="color: DodgerBlue">Employee Information</h1>
 
-		<body style="background: {{ color }};">
+		<body style="background-image: url('/static/bg.jpg'); background-size: cover;">
 
 			<form action="/fetchdata" autocomplete="on" method="POST">
 
